src/main/resources/Krakatau-master/tests/assembler/bad/const0.j
.class test
.super java/lang/Object
.const [0] = Int 8
.end class
